# FFTVisualizer

./: .gitmodules  CMakeLists.txt  FFT.sln  cmake-variants.json
FFT/: App.cpp  AudioFileReader.cpp  AudioFileReader.h  AudioInput.h  AudioPlayer.h  AudioProcessor.h  AudioVisualizer.h  BartlettHannWindow.h  Camera.h  Display.cpp  Display.h  FFT.cpp  FFT.h  FFT.vcxproj  FFT.vcxproj.filters  FFTFilter.cpp  FFTFilter.h  FourierTransform.cpp  FourierTransform.h  HammingWindow.h  ImageRenderer.cpp  ImageRenderer.h  ImageShader.cpp  ImageShader.h  LineRenderer.cpp  LineRenderer.h  Loader.cpp  Loader.h  OpenALPlayer.cpp  OpenALPlayer.h  OpenGLLoader.cpp  OpenGLLoader.h  OpenGLVisualizer.cpp  OpenGLVisualizer.h  PacketQueue.h  Resources.h  SampleConverter.cpp  SampleConverter.h  ShaderProgram.cpp  ShaderProgram.h  (+8 more)
FFT/Input/: AudioFileReader.cpp  AudioFileReader.h  AudioInput.h
FFT/Player/: AudioPlayer.h  OpenALPlayer.cpp  WindowsPlayer.cpp  WindowsPlayer.h
FFT/Processing/: AudioProcessor.h  FFT.cpp  FFTFilter.cpp  FourierTransform.cpp  FourierTransform.h  WindowFunction.h
FFT/Utils/: Resources.h  SampleConverter.cpp  SampleConverter.h
FFT/Visualization/: AudioVisualizer.cpp  AudioVisualizer.h  sdlutil.h
FFT/Visualization/OpenGL/: Display.cpp  Display.h  ImageRenderer.cpp  ImageRenderer.h  ImageShader.cpp  Loader.cpp  Loader.h  ParticleRenderer.cpp  ParticleRenderer.h  ParticleShader.cpp  PostProcessingRenderer.cpp  PostProcessingRenderer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp
Test/: Test.vcxproj  Test.vcxproj.filters
cmake/: FindFFmpeg.cmake  FindGLAD.cmake  FindGLFW.cmake  FindOpenAL.cmake  FindSTB.cmake  SuperBuild.cmake
res/shaders/: particleFragment.shader
src/: App.cpp  CMakeLists.txt
src/Input/: AudioFileReader.cpp  AudioFileReader.h  AudioInput.h  CMakeLists.txt
src/Player/: AudioPlayer.h  CMakeLists.txt  OpenALPlayer.cpp  OpenALPlayer.h  WindowsPlayer.cpp
src/Processing/: AudioProcessor.h  BartlettWindow.h  BlackmanWindow.h  CMakeLists.txt  CosineWindow.h  FFT.cpp  FFT.h  FFTFilter.cpp  FFTFilter.h  FourierTransform.cpp  FourierTransform.h  GaussWindow.h  HannWindow.h  LanczosWindow.h  RectangularWindow.h  TriangularWindow.h  WindowFunction.h
src/Utils/: CMakeLists.txt  PacketQueue.h  Resources.h  SampleConverter.cpp  SampleConverter.h
src/Visualization/: AudioVisualizer.h  CMakeLists.txt  RandomNoise.cpp  RandomNoise.h  sdlutil.cpp  sdlutil.h
src/Visualization/OpenGL/: CMakeLists.txt  Camera.h  Display.cpp  ImageRenderer.cpp  ImageRenderer.h  LineRenderer.cpp  LineShader.cpp  LineShader.h  Loader.cpp  Loader.h  ParticleRenderer.cpp  ParticleShader.h  PostProcessingRenderer.cpp  PostProcessingRenderer.h  PostProcessingShader.cpp  PostProcessingShader.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h
